Build: remove commented-out lines