@@ -425,8 +425,6 @@
 
         <exec executable="sbt" failonerror="true">
             <!-- sbt options are in `.sbtopts` -->
-<!--            <arg value="-J-Xmx8G"/>-->
-<!--            <arg value="-J-Xss1M"/>-->
             <arg value="-Dorbeon.version=${release.number}"/>
             <arg value="-Dorbeon.edition=${edition}"/>
             <arg value="project root"/>
@@ -580,11 +578,6 @@
     <target name="test-unit" depends="init">
         <exec executable="sbt" failonerror="true">
             <!-- sbt options are in `.sbtopts` -->
-<!--            <arg value="-J-Xmx8G"/>-->
-<!--            <arg value="-J-Xss1M"/>-->
-            <!--<arg value="-J-XX:MaxMetaspaceSize=1G"/>-->
-<!--            <arg value="-J-XX:+CMSClassUnloadingEnabled"/>-->
-<!--            <arg value="-J-XX:+UseConcMarkSweepGC"/>-->
             <arg value="-Dorbeon.version=${release.number}"/>
             <arg value="-Dorbeon.edition=${edition}"/>
             <arg value="project root"/>
@@ -721,11 +714,6 @@
                 <!-- Run sbt tests -->
                 <exec executable="sbt" failonerror="true">
                     <!-- sbt options are in `.sbtopts` -->
-<!--                    <arg value="-J-Xmx8G"/>-->
-<!--                    <arg value="-J-Xss1M"/>-->
-                    <!--<arg value="-J-XX:MaxMetaspaceSize=1G"/>-->
-<!--                    <arg value="-J-XX:+CMSClassUnloadingEnabled"/>-->
-<!--                    <arg value="-J-XX:+UseConcMarkSweepGC"/>-->
                     <arg value="-Dorbeon.version=${release.number}"/>
                     <arg value="-Dorbeon.edition=${edition}"/>
                     <arg value="project root"/>
